# efa-libfabric-bench

./: CMakeLists.txt  Makefile  README.md  benchmark  client.conf  configure  efa-paper-story.org  paper.org  server.conf
efa-bench/: CMakeLists.txt  client-local.conf  client.conf  local-client.conf  local-server.conf  server-local.conf  server.conf  testsuite.py
efa-bench/csv_dumps/mt_benchmarks/: batch.csv  ping_pong.csv
efa-bench/csv_dumps/st_benchmarks/single_thread_benchmarks/: batch_run1.csv  batch_run2.csv  batch_run3.csv  ping_pong_run1.csv  ping_pong_run2.csv  ping_pong_run3.csv
efa-bench/csv_dumps/st_sockets_benchmark/: batch_run1.csv  batch_run2.csv  batch_run3.csv  ping_pong_run1.csv  ping_pong_run2.csv  ping_pong_run3.csv
efa-bench/perf_dumps/: batch_client_4000.txt  batch_client_80.txt  batch_server_4000.txt  batch_server_80.txt  client-send.txt  client-write.txt  dgram_1k.txt  dgram_4k.txt  dgram_8k.txt  ibv-poll-new-low.txt  ibv-poll-new.txt  ibv-poll-old.txt  ibv-poll-perf-stat.txt  mt_client_100.perf.txt  mt_client_110.perf.txt  mt_client_perf_stat.txt  mt_vs_st_perf_stat.txt  server-send.txt  server-write.txt
efa-bench/scripts/: extract_bw.py  parse_csv.py  test_runner.py
efa-bench/src/: Benchmark.cpp  BenchmarkClient.cpp  BenchmarkClient.h  BenchmarkNode.cpp  BenchmarkNode.h  BenchmarkServer.cpp  BenchmarkServer.h  Common.cpp  Common.h  CsvLogger.cpp  CsvLogger.h  GFlagsConfig.cpp  GflagsConfig.h  RmaClient.cpp  RmaClient.h  RmaNode.h  RmaServer.cpp  RmaServer.h  SendRecvClient.cpp  SendRecvClient.h  SendRecvNode.h  SendRecvServer.cpp  SendRecvServer.h  backup.cpp  benchmark.cpp  cmd_line.cpp  cmd_line.h
libefa/: CMakeLists.txt
libefa/src/: client.h  common.cpp  fi_info.cpp  fi_info.h
libefa/src/fi_pingpong_util/: fi_pingpong_util.cpp  fi_pingpong_util.h
libefa/src/libefa/: Client.cpp  Client.h  ConnectionContext.cpp  ConnectionContext.h  FabricInfo.cpp  FabricInfo.h  FabricUtil.cpp  FabricUtil.h  Node.cpp  Node.h  PerformancePrinter.cpp  PerformancePrinter.h  Server.cpp  Server.h  Util.h  client.cpp  common.h  includes.cpp  includes.h  server.cpp  server.h
libefa/src/libefa/ftlib/: hmem.c  hmem.h  includes.h  shared.c  shared.h
src/: benchmark.cpp  client.cpp  cmd_line.cpp  cmd_line.h  cmdline.cpp  common.cpp  common.h  fi_info.cpp  fi_info.h  fi_ping.cpp  fi_ping.h  fi_pingpong_util.cpp  fi_pingpong_util.h  includes.h  server.cpp
src/fi_pingpong_util/: fi_pingpong_util.cpp  fi_pingpong_util.h
